# Kairos2

./: .env.example  .gitignore  AGENTS.md  README.md  gateway_main.py  kairos.bat  kairos_cli.bat  kairos_cli_new.bat  kairos_old.bat  kairos_old_g.bat  kairoscli.bat  main.py  pyproject.toml  requirements.txt  run_temp_cli.py  test_browser_fix.py  test_greenlet.py  test_persistent_pw.py  test_plain_pw.py
kairos/: __init__.py  agent.py  browser_manager.py  cdp_manager.py  cli.py  config.py  gateway_main.py  main.py  main_gateway.py  resume.py  temp_cli.py  terminal_manager.py  tokens.py  tools.py
kairos/gateway/: __init__.py  history.py  manager.py  models.py  protocol.py  repository.py  server.py
kairos/tools/: __init__.py  base.py  browser.py  edit.py  git.py  read.py  search.py  session.py  skills.py  subagent.py  terminal.py  write.py
src/: agent.py  main.py
tests/: run_gateway_tests.py  test_compaction.py  test_gateway_api.py  test_gateway_config.py  test_gateway_history.py  test_gateway_manager.py  test_gateway_repository.py  test_sessions.py  test_terminal_manager.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/electron/: main.ts  preload.ts
ui/src/: App.tsx  main.tsx  markdown.tsx  styles.css  types.ts  utils.ts
ui/src/components/: ChatArea.tsx  ChatInput.tsx  MessageBubble.tsx  PanePicker.tsx  Sidebar.tsx  SplitPane.tsx  StatusBar.tsx  TabBar.tsx  WorkspacePicker.tsx
ui/src/hooks/: useGateway.ts
