[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kairos"
version = "0.1.0"
description = "Minimal personal coding agent in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]
stealth = [
    "cloakbrowser>=0.3.0",
]

[project.scripts]
kairos = "kairos.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kairos*"]